minor adaptions